Major application refactoring that includes upgrade to .NET 5.0, redux store access using hooks, ClientApp file restructure, general code refactoring (client & server)
